# myl

./: .gitignore  README.md  benchmark_coverage_check.md  case_based_sanity_benchmark.xlsx  confidence_benchmark_alignment.csv  confidence_calibration_analysis.md  confidence_calibration_summary.csv  pyproject.toml  requirements-step1-chemprop.txt  requirements-step1.txt
configs/: data_sources.yaml  labeling_rules.yaml
data/: 疾病与上市药物(1).xlsx
docs/: amr_integration_plan.md  amr_reference_notes.md  disease_microbe_literature_expansion_20260421.md  food_tcm_microbe_relation_plan.md  health_signature_integration_plan.md  panel_83_microbes_aao5774_learning_notes.md  panel_83_microbes_aao5774_learning_table.csv  project_blueprint.md  promote_data_integration_notes.md  reference_master_list.md  research_notes.md  step123_structure.md  step1_chemprop.md  step1_hybrid.md  step1_pipeline.md  step2_enzyme_prior_layer.md  step2_pipeline.md  step3_pipeline.md  step3_real_cohort_plan.md  technical_route_detailed.md  web_app.md
scripts/: analyze_confidence_calibration.py  assemble_step2_inputs.py  benchmark_web_api.py  build_cross_feeding_reference.py  build_disease_reference_tables.py  build_food_tcm_first_pass_tables.py  build_gmrepo_disease_microbe_supplement.py  build_gutm_disorder_disease_microbe_supplement.py  build_library_83_panel_predictions.py  build_promote_literature_seed_table.py  build_revised_case_outputs.py  build_step2_enzyme_reference.py  build_step2_mechanism_reference.py  build_step3_biotransform_augmented_predictions.py  download_step1_data.py  run_web_app.py  (+32 more)
(+167 files in other folders)
